// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DateRangePicker > :mode 1`] = `
<div
  class="t-date-picker"
>
  <div
    class="t-select-input t-select-input--empty"
  >
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-is-readonly t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        />
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder="请选择年份"
          readonly="readonly"
          type="text"
          unselectable="on"
        />
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-icon t-icon-calendar"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <defs>
              <mask
                height="24"
                id="t-icon-calendar-instance-2-overlap-fill1"
                mask-type="luminance"
                maskContentUnits="userSpaceOnUse"
                maskUnits="userSpaceOnUse"
                width="24"
                x="0"
                y="0"
              >
                <rect
                  fill="#fff"
                  height="24"
                  width="24"
                  x="0"
                  y="0"
                />
                <path
                  d="M21 10H3V5H21V10Z"
                  fill="#000"
                  stroke="none"
                />
                <path
                  d="M3 10H21M3 10V5H21V10M3 10V21H21V10M7 5V1.5M17 5V1.5"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </mask>
              <mask
                height="24"
                id="t-icon-calendar-instance-2-overlap-fill2"
                mask-type="luminance"
                maskContentUnits="userSpaceOnUse"
                maskUnits="userSpaceOnUse"
                width="24"
                x="0"
                y="0"
              >
                <rect
                  fill="#fff"
                  height="24"
                  width="24"
                  x="0"
                  y="0"
                />
                <path
                  d="M3 10H21M3 10V5H21V10M3 10V21H21V10M7 5V1.5M17 5V1.5"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </mask>
            </defs>
            <g
              id="calendar"
            >
              <path
                d="M21 10H3V21H21V10Z"
                fill="transparent"
                id="fill1"
                mask="url(#t-icon-calendar-instance-2-overlap-fill1)"
              />
              <path
                d="M21 10H3V5H21V10Z"
                fill="transparent"
                id="fill2"
                mask="url(#t-icon-calendar-instance-2-overlap-fill2)"
              />
              <path
                d="M3 10H21M3 10V5H21V10M3 10V21H21V10M7 5V1.5M17 5V1.5"
                id="stroke1"
                stroke="currentColor"
                stroke-width="2"
              />
            </g>
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DateRangePicker > :range 1`] = `
<div
  class="t-date-picker"
  range="true"
>
  <div
    class="t-select-input"
  >
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-is-readonly t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        />
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder="请选择日期"
          readonly="readonly"
          type="text"
          unselectable="on"
        />
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-icon t-icon-calendar"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <defs>
              <mask
                height="24"
                id="t-icon-calendar-instance-3-overlap-fill1"
                mask-type="luminance"
                maskContentUnits="userSpaceOnUse"
                maskUnits="userSpaceOnUse"
                width="24"
                x="0"
                y="0"
              >
                <rect
                  fill="#fff"
                  height="24"
                  width="24"
                  x="0"
                  y="0"
                />
                <path
                  d="M21 10H3V5H21V10Z"
                  fill="#000"
                  stroke="none"
                />
                <path
                  d="M3 10H21M3 10V5H21V10M3 10V21H21V10M7 5V1.5M17 5V1.5"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </mask>
              <mask
                height="24"
                id="t-icon-calendar-instance-3-overlap-fill2"
                mask-type="luminance"
                maskContentUnits="userSpaceOnUse"
                maskUnits="userSpaceOnUse"
                width="24"
                x="0"
                y="0"
              >
                <rect
                  fill="#fff"
                  height="24"
                  width="24"
                  x="0"
                  y="0"
                />
                <path
                  d="M3 10H21M3 10V5H21V10M3 10V21H21V10M7 5V1.5M17 5V1.5"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </mask>
            </defs>
            <g
              id="calendar"
            >
              <path
                d="M21 10H3V21H21V10Z"
                fill="transparent"
                id="fill1"
                mask="url(#t-icon-calendar-instance-3-overlap-fill1)"
              />
              <path
                d="M21 10H3V5H21V10Z"
                fill="transparent"
                id="fill2"
                mask="url(#t-icon-calendar-instance-3-overlap-fill2)"
              />
              <path
                d="M3 10H21M3 10V5H21V10M3 10V21H21V10M7 5V1.5M17 5V1.5"
                id="stroke1"
                stroke="currentColor"
                stroke-width="2"
              />
            </g>
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DateRangePicker > :value 1`] = `
<div
  class="t-date-picker"
>
  <div
    class="t-select-input"
  >
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-is-readonly t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        />
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder="请选择日期"
          readonly="readonly"
          type="text"
          unselectable="on"
        />
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-icon t-icon-calendar"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <defs>
              <mask
                height="24"
                id="t-icon-calendar-instance-1-overlap-fill1"
                mask-type="luminance"
                maskContentUnits="userSpaceOnUse"
                maskUnits="userSpaceOnUse"
                width="24"
                x="0"
                y="0"
              >
                <rect
                  fill="#fff"
                  height="24"
                  width="24"
                  x="0"
                  y="0"
                />
                <path
                  d="M21 10H3V5H21V10Z"
                  fill="#000"
                  stroke="none"
                />
                <path
                  d="M3 10H21M3 10V5H21V10M3 10V21H21V10M7 5V1.5M17 5V1.5"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </mask>
              <mask
                height="24"
                id="t-icon-calendar-instance-1-overlap-fill2"
                mask-type="luminance"
                maskContentUnits="userSpaceOnUse"
                maskUnits="userSpaceOnUse"
                width="24"
                x="0"
                y="0"
              >
                <rect
                  fill="#fff"
                  height="24"
                  width="24"
                  x="0"
                  y="0"
                />
                <path
                  d="M3 10H21M3 10V5H21V10M3 10V21H21V10M7 5V1.5M17 5V1.5"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </mask>
            </defs>
            <g
              id="calendar"
            >
              <path
                d="M21 10H3V21H21V10Z"
                fill="transparent"
                id="fill1"
                mask="url(#t-icon-calendar-instance-1-overlap-fill1)"
              />
              <path
                d="M21 10H3V5H21V10Z"
                fill="transparent"
                id="fill2"
                mask="url(#t-icon-calendar-instance-1-overlap-fill2)"
              />
              <path
                d="M3 10H21M3 10V5H21V10M3 10V21H21V10M7 5V1.5M17 5V1.5"
                id="stroke1"
                stroke="currentColor"
                stroke-width="2"
              />
            </g>
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;
